force-app/main/default/objects/OrderApi__Invoice_Line__c/fields/Fon_Refund_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Fon_Refund_Quantity__c</fullName>
    <label>Refund Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>